<resources>
    <string name="app_name">Dev-p2-android-application</string>
    <string name="login_welcome">Trivia Game</string>
    <string name="password">user_preferences</string>
    <string name="username">logged_in_user_id</string>
    <string name="shared_preferences_key">user_preferences</string>
    <string name="username_key">username</string>
    <string name="login">Login</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="Welcome_Admin" />
    <string name="quit_game">Quit Game</string>
    <string name="high_scores">High Scores</string>
    <string name="play_game">Play Game</string>
    <string name="Welcome_User" />
    <string name="option_one">Option One</string>
    <string name="option_three">Option Three</string>
    <string name="option_four">Option Four</string>
    <string name="insert_question_here"><![CDATA[<Insert Question Here>]]></string>
    <string name="triviagamelogo">TriviaGameLogo</string>
    <string name="log_out">Log Out</string>
    <string name="quit">QUIT</string>
</resources>