<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- User Panel -->
    <LinearLayout
        android:id="@+id/userPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/userWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welcome_User"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/playGameButtonUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_game"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/highScoreButtonUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/quitGameButtonUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_game" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>