<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Admin Panel -->
    <LinearLayout
        android:id="@+id/adminPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/adminWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welcome_Admin"
            android:hint="@string/Welcome_Admin"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/playGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_game"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/highScoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/editQuestionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Questions"
            android:layout_marginBottom="16dp" />



        <Button
            android:id="@+id/quitGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quit_game" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>